# QUIXO_Projet

./: .gitignore  README.md  Rapport_de_projet.odt  pyproject.toml
projet_quixo/: Deep_q_learning.py  Deep_q_learning_MCTS.py  Projet_QUIXO.py  projet_QUIXO_test.py  projet_sans_cano.py  q_learning.py  q_learning_cano_parallele.py  q_learning_parallele.py
